--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_svg: ^1.0.0
   url_launcher: ^6.0.17
   introduction_screen: ^2.1.0
+  shared_preferences: ^2.0.11
+  after_layout: ^1.1.0
 
 dev_dependencies:
   flutter_test:
